# sbre

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: demo.c
res/: test.txt
res/shader/base/: circle_fragment.glsl  fragment.glsl  vertex.glsl
src/: common.h  font.c  main.c  renderer.c  sbre.c  sbre.h  sbre_core.c  shader.c
src/debug/: debug.c
src/util/: util.h
